# rust-openai

./: .gitignore  LICENSE  README.md  RUN.md
rust_gpt3/: Cargo.toml
rust_gpt3/src/: main.rs
rust_openai/: Cargo.toml
rust_openai/examples/: example.rs
rust_openai/src/: lib.rs
